fix text align footer

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -89,7 +89,9 @@
   
   .section-footer{
     padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
   }
+
   .section-title {
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
